<?xml version="1.0"?>
<package format="2">
  <name>kmu_gui</name>
  <version>0.1.0</version>
  <description>
     kmu_gui
  </description>

  <maintainer email="sizs2002@gmail.com">JEon</maintainer>

  <author>root</author>
  <license>BSD</license>

  <depend>catkin</depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>qtbase5-dev</depend>
  <depend>libboost-date-time-dev</depend>
  <depend>libboost-thread-dev</depend>
  <depend>message_generation</depend>
  <depend>rosconsole</depend>
  <depend>roscpp_serialization</depend>
  <depend>rostime</depend>
  <depend>libqt5-core</depend>
  <depend>libqt5-gui</depend>
  <depend>libqt5-widgets</depend>
  <depend>opengl</depend>
  <depend>glut</depend>
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
